[package]
name = "rsa"
version = "0.2.0"
authors = ["RustCrypto Developers", "dignifiedquire <dignifiedquire@gmail.com>"]
edition = "2018"
description = "Pure Rust RSA implementation"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rsa"
repository = "https://github.com/RustCrypto/RSA"
keywords = ["rsa", "encryption", "security", "crypto"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
num-bigint = { package = "num-bigint-dig", version = "0.6", features = ["rand", "i128", "u64_digit", "prime", "zeroize"], git = "https://github.com/mesalock-linux/num-bigint-sgx", branch = "dig" }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
num-integer = { git = "https://github.com/mesalock-linux/num-integer-sgx" }
num-iter = {git = "https://github.com/mesalock-linux/num-iter-sgx" }
lazy_static = { version = "1.3.0", default-features = false, features = ["spin_no_std"] }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.6.5_sgx1.1.0" }
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx" }
#failure= { git = "https://github.com/mesalock-linux/failure-sgx" }
subtle = { git = "https://github.com/mesalock-linux/subtle-sgx" }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies.zeroize]
version = "1.1.0"
features = ["alloc", "zeroize_derive"]

[dependencies.serde]
optional = true
version = "1.0.99"
#default-features = false
#features = ["std", "derive"]
git = "https://github.com/mesalock-linux/serde-sgx"

[dev-dependencies]
#base64 = "0.11.0"
#sha-1 = "0.8.1"
#sha2 = "0.8.0"
#hex = "0.4.0"
#serde_test = "1.0.89"
#rand_xorshift = "0.2.0"


[[bench]]
name = "key"

[profile.release]
# debug = true

[profile.bench]
# debug = true

[features]
default = ["mesalock_sgx"]
nightly = ["subtle/nightly", "num-bigint/nightly"]
serde1 = ["num-bigint/serde", "serde"]
expose-internals = []
mesalock_sgx = ["sgx_tstd"]
