[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
rsa = { path = "../../..", features = ["serde1", "expose-internals"] }
hex = { git = "https://github.com/mesalock-linux/rust-hex-sgx" }
sha-1 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
#sha2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
serde_test = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3" }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx", branch = "dig", package = "num-bigint-dig" }
zeroize = { version = "1.1.0", features = ["alloc"] }
lazy_static = { version = "1", default-features = false, features = ["spin_no_std"] }


[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
